[Xwayland] wp_linux_drm_syncobj crashing x11 server
Hello, I have problems with xwayaland I'll take for example, the game TF2 latest version runs on Vulcan (Open GL version works fine, games that work natively on volcano can somehow be related to this problem too?) I'm using the latest version of gnome with explicit synchronization support. How to reproduce Actually, if you try to move the window of the running game to another desktop in overview mode or try to move to another desktop yourself, the game crashes the xwayland process along with it and also other applications that are still running on x11.
I found in journal errors related to explicit sync
wp_linux_drm_syncobj_surface_v1#279: error 4: No Acquire point provided
WL: error in client communication (pid 1266)
Window manager warning: Treating resize request of legacy application 0x3c00002 as a fullscreen request
I use Nvidia driver beta 555.52.04 Xwayland 24.1 Gnome 46.2